# drop-in-hockey-site

./: .gitignore  LICENSE  Procfile  README.md  README.rst  manage.py  pyproject.toml
drop_in_hockey_site/: asgi.py  settings.py  urls.py  wsgi.py
roster/: admin.py  models.py  urls.py  views.py
roster/migrations/: 0001_initial.py  0002_player_is_substitute.py  0003_headertext.py  0004_player_time_checked_in.py  0005_alter_player_time_checked_in.py
roster/templates/roster/: index.html
tests/: test_drop_in_hockey_site.py
