[tool.poetry]
name = "drop-in-hockey-site"
version = "0.1.0"
description = ""
authors = ["Alec Gillis <gillismail1213@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
Django = "^4.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
whitenoise = "^6.2.0"
dj-database-url = "^1.0.0"
decouple = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
