[tool.poetry]
name = "drop-in-hockey-site"
version = "0.1.0"
description = ""
authors = ["Alec Gillis <gillismail1213@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
Django = "^4.1"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
